--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.5.5",
+    "concurrently": "^4.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "sequelize": "^5.12.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:client": "react-scripts start",
+    "start:server": "cross-env PORT=9000 nodemon server/index.js",
+    "start": "concurrently --kill-other-on-fail \"yarn start:server\" \"yarn start:client\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -17,6 +25,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "presets": [
+    "@babel/preset-env"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
