--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
     "sequelize": "^5.12.2"
   },
   "scripts": {
