--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "scripts": {
     "start:client": "react-scripts start",
-    "start:server": "cross-env PORT=9000 nodemon server/index.js",
-    "start": "concurrently --kill-other-on-fail \"yarn start:server\" \"yarn start:client\" ",
+    "start:server": " nodemon server/index.js",
+    "start": "concurrently --handle-input --kill-others-on-fail \"yarn start:server\" \"yarn start:client\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
