--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start:client": "react-scripts start",
-    "start:server": " nodemon server/index.js",
+    "start:server": " nodemon backend/index.js",
     "start": "concurrently --handle-input --kill-others-on-fail \"yarn start:server\" \"yarn start:client\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
