--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^1.5.8",
     "glob": "^7.1.4",
     "history": "^4.9.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -26,6 +27,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
+    "sass-loader": "^7.3.1",
     "sequelize": "^5.12.2"
   },
   "scripts": {
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2"
   }
 }
