--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
