--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.1.9-1",
@@ -16,6 +17,7 @@
     "formik": "^1.5.8",
     "glob": "^7.1.4",
     "history": "^4.9.0",
+    "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
