--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Numizmatyczna Encyklopedia Świata",
-  "short_name": "ApusArt Numizmatyka",
+  "name": "Numizmatyczny Atlas Świata - Apusart Numido",
+  "short_name": "ApusArt Numido - Numizmoteka",
   "author": "Apusart",
   "description": "",
   "theme_color": "#000000",
