--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^1.5.8",
     "glob": "^7.1.4",
     "history": "^4.9.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
