--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "connect-redis": "^4.0.2",
+    "connected-react-router": "^6.5.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -17,7 +18,7 @@
     "express-session": "^1.16.2",
     "formik": "^1.5.8",
     "glob": "^7.1.4",
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
@@ -27,6 +28,7 @@
     "path": "^0.12.7",
     "pg": "^7.12.1",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
@@ -34,6 +36,7 @@
     "react-scripts": "3.0.1",
     "redis": "^2.8.0",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.0.5",
     "sass-loader": "^7.3.1",
     "sequelize": "^5.12.2"
