--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.5.5",
+    "acl": "^0.4.11",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
