--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.0.5",
     "sass-loader": "^7.3.1",
-    "sequelize": "^5.12.2"
+    "sequelize": "^5.12.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start:client": "react-scripts start",
