--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "file-saver": "^2.0.2",
     "formik": "^1.5.8",
     "glob": "^7.1.4",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
