--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.6",
     "express-session": "^1.16.2",
     "file-saver": "^2.0.2",
     "formik": "^1.5.8",
