--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   },
   "scripts": {
     "start:client": "react-scripts start",
-    "start:server": " nodemon backend/index.js",
-    "start": "concurrently --handle-input --kill-others-on-fail \"yarn start:server\" \"yarn start:client\" ",
+    "start:server": " node backend/index.js",
+    "start": "concurrently --handle-input \"yarn start:server\" \"yarn start:client\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
